calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/rke2.mdx
---
title: RKE2 - Rancher's Next Generation Kubernetes Distribution
description: Install Calico Enterprise on an RKE2 cluster.
---

## Big picture

Install {{prodname}} as the required CNI for networking and/or network policy on Rancher's Next-generation Kubernetes Distribution (RKE2) clusters.

## Concepts

{{prodname}} supports the Calico CNI with {{prodname}} network policy:

The geeky details of what you get:

<GeekDetails
  prodname='{{prodname}}'
  details='Policy:Calico,IPAM:Calico,CNI:Calico,Overlay:VXLAN,Routing:BGP,Datastore:Kubernetes'
/>

## Before you begin

**Required**

- RKE2 cluster meets the [{{prodname}} requirements](requirements.mdx)
- A compatible [RKE2 cluster](https://docs.rke2.io/).
- The version of RKE2 aligns with the [{{prodname}} Kubernetes versions requirements](requirements.mdx#supported-kubernetes-versions)
- [Configure cluster with no CNI plugin](https://docs.rke2.io/install/configuration) using any of these methods:

  - RKE2 CLI: `--cni none`
  - Install script: `RKE2_CNI=none`
  - [Configuration file](https://docs.rke2.io/install/configuration#configuration-file): `cni: none`

- [Credentials for the Tigera private registry and a license key](calico-enterprise.mdx).

- A `kubectl` environment with access to your cluster

  - Ensure you have the [Kubeconfig file that was generated when you created the cluster](https://docs.rke2.io/cluster_access).

- If using a Kubeconfig file locally, [install and set up the Kubectl CLI tool](https://kubernetes.io/docs/tasks/tools/install-kubectl/).

## How to

- [Install {{prodname}}](#install-calico-enterprise)
- [Install the {{prodname}} license](#install-the-calico-enterprise-license)
- [Secure {{prodname}} components with network policy](#secure-calico-enterprise-components-with-network-policy)

### Install {{prodname}}

1. [Configure a storage class for {{prodname}}.](../../operations/logstorage/create-storage.mdx).

1. Install the Tigera operator and custom resource definitions.

   ```bash-plain-text
   kubectl create -f {{filesUrl}}/manifests/tigera-operator.yaml
   ```

1. Install the Prometheus operator and related custom resource definitions. The Prometheus operator will be used to deploy Prometheus server and Alertmanager to monitor {{prodname}} metrics.

   :::note

   If you have an existing Prometheus operator in your cluster that you want to use, skip this step. To work with {{prodname}}, your Prometheus operator must be v0.40.0 or higher.

   :::

   ```bash-plain-text
   kubectl create -f {{filesUrl}}/manifests/tigera-prometheus-operator.yaml
   ```

1. Install your pull secret.

   If pulling images directly from `quay.io/tigera`, you will likely want to use the credentials provided to you by your Tigera support representative. If using a private registry, use your private registry credentials instead.

   ```bash-plain-text
   kubectl create secret generic tigera-pull-secret \
       --type=kubernetes.io/dockerconfigjson -n tigera-operator \
       --from-file=.dockerconfigjson=<path/to/pull/secret>
   ```

   For the Prometheus operator, create the pull secret in the `tigera-prometheus` namespace and then patch the deployment.

   ```bash-plain-text
   kubectl create secret generic tigera-pull-secret \
       --type=kubernetes.io/dockerconfigjson -n tigera-prometheus \
       --from-file=.dockerconfigjson=<path/to/pull/secret>
   kubectl patch deployment -n tigera-prometheus calico-prometheus-operator \
       -p '{"spec":{"template":{"spec":{"imagePullSecrets":[{"name": "tigera-pull-secret"}]}}}}'
   ```

1. Install any extra [Calico resources](../../reference/resources/index.mdx) needed at cluster start using [calicoctl](../../reference/clis/calicoctl/overview.mdx).

1. Install the Tigera custom resources. For more information on configuration options available, see [the installation reference](../../reference/installation/api.mdx).

   ```bash-plain-text
   kubectl create -f {{filesUrl}}/manifests/rancher/custom-resources-rke2.yaml
   ```

   You can now monitor progress with the following command:

   ```bash-plain-text
   watch kubectl get tigerastatus
   ```

   Wait until the `apiserver` shows a status of `Available`, then proceed to the next section.

### Install the {{prodname}} license

In order to use {{prodname}}, you must install the license provided to you by Tigera.

```bash-plain-text
kubectl create -f </path/to/license.yaml>
```

You can now monitor progress with the following command:

```bash-plain-text
watch kubectl get tigerastatus
```

When all components show a status of `Available`, proceed to the next section.

### Secure {{prodname}} components with network policy

To secure {{prodname}} component communications, install the following set of network policies.

```bash-plain-text
kubectl create -f {{filesUrl}}/manifests/tigera-policies.yaml
```

## Next steps

**Recommended**

- [Configure access to {{prodname}} Manager UI](../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../operations/cnx/authentication-quickstart.mdx)
- [Configure your own identity provider](../../operations/cnx/configure-identity-provider.mdx)

**Recommended - Networking**

- The default networking uses VXLAN encapsulation with BPG routing. For all networking options, see [Determine best networking option](../../networking/determine-best-networking.mdx).

**Recommended - Security**

- [Get started with {{prodname}} tiered network policy](../../network-policy/policy-tiers/tiered-policy.mdx)
